--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Bruhtton</string>
     <string name="bruh">Bruh</string>
+    <string name="bruhface">Bruh face</string>
 </resources>
